# project-1_Lazarev_NOD

./: Makefile.save  README.md  gameplay.cast  gameplay2.cast  pyproject.toml
labyrinth_game/: constants.py  main.py  main.py.save  player_actions.py  utils.py
