[tool.poetry]
name = "project-1-lazarev-nod"
version = "0.1.0"
description = ""
authors = ["Lazarev Victor<loba4evskogo@gmai.com>"]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "labyrinth_game"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[tool.poetry.group.dev.dependencies]
ruff = "^0.13.3"
